# simpleFemCpp

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  build.sh  build_and_run.sh  clean.sh
doc_doxygen/html/: annotated.html  annotated_dup.js  class_fem_params-members.html  class_fem_params.html  class_fem_params.js  class_material_params-members.html  class_material_params.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  fem_8h_source.html  files.html  functions.html  functions_func.html  functions_vars.html  index.html  navtreedata.js  navtreeindex0.js
doc_doxygen/html/search/: all_0.js  all_1.js  classes_0.js  classes_1.js  functions_0.js  searchdata.js  variables_0.js
doc_doxygen/latex/: annotated.tex  class_fem_params.tex  class_material_params.tex  fem_8h_source.tex  files.tex  refman.tex
docs/: Doxyfile.in
gnuplot/: plot.gnuplot  plot2.gnuplot
src/: fem.cpp  fem.h
